--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 </a>
             </div>
         </section>
-        <img src="images/Imagem.png" alt="DaniloPuente">
+        <img src="images/imagenYo.jpg" alt="DaniloPuente" class="presentacion__imagen">
     </main>
     <footer class="footer">
         <p>Desarrollado por masaeldev</p>
