--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <nav class="header__menu">
             <a href="index.html" class="header__menu__link">HOME</a>
             <a href="about.html" class="header__menu__link">SOBRE MI</a>
+            <a href="cv.html" class="header__menu__link">CURRICULUM</a>
         </nav>
     </header>
     <main class="presentacion">
